--- a/appsettings.json
+++ b/appsettings.json
@@ -6,11 +6,11 @@
     }
   },
   "EmailConfiguration": {
-    "From": "codemazetest@gmail.com",
+    "From": "teeyumyum963@gmail.com",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
-    "Username": "codemazetest@gmail.com",
-    "Password": "our test password"
+    "Username": "teeyumyum963@gmail.com",
+    "Password": "rsqg rxay lshd xngh"
   },
   "AllowedHosts": "*"
 }
